tests/errors/19_if_condition_not_logical.f
      PROGRAM IF_NOT_LOGICAL
      INTEGER A
      A = 1
      IF (A) THEN
          CONTINUE
      ENDIF
      END
